<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">T-Time</string>
    <string name="def_text">Where To?</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_favs">Pick a route or stop and mark it as a favorite</string>
    <string name="favorites">Favorites</string>
    <string name="routes_fav">Favorite Routes</string>
    <string name="stops_fav">Favorite Stops</string>
    <string name="stops_make_fave">Make a Favorite</string>
    <string name="action_alerts">Get Alerts</string>
    <string name="action_settings">Settings</string>
    <string name="action_schedule">Show Schedule (for this Route)</string>
    <string name="bus_prefix">Bus #</string>
    <string name="boston">Boston</string>
    <string name="noSched">sorry, no schedule available</string>
    <string name="scheduled">Schedule:</string>
    <string name="actual">Actual:</string>
    <string name="stopAlert">Alerts</string>
    <string name="stopMap">Map Stop</string>
    <string name="stopDetail">Stop Details</string>
    <string name="schedSvcErr">Sorry! There is an error getting times from the MBTA server</string>
    <string name="chkNet">Check the network and try again</string>
    <string name="weekdays">Weekday Schedule</string>
    <string name="saturdays">Saturday Schedule</string>
    <string name="sunday">Sundays and Holidays</string>
    <string name="inbound">Inbound</string>
    <string name="outbound">Outbound</string>
    <string name="wait">Please Wait</string>
    <string name="getting_data">Calling the MBTA</string>
    <string name="nearby">Nearby Stops</string>
    <string name="action_nearby">Get Nearby Stops</string>
    <string name="stopEmptyString">Sorry, no timing for this stop</string>
    <string name="one_way">Express</string>


    <string name="mac_map_dbgkey">AIzaSyByV2xh1lLMrEUNZL2P92JIEQtMYJ4SyTI</string>

    <string-array name="transit_methods">
        <item>Bus</item>
        <item>Subway</item>
        <item>Commuter Rail</item>
        <item>Boat</item>
    </string-array>

    <string-array name="nav_groups">
        <item>Silver Line</item>
        <item>Metro Boston \n1->50</item>
        <item>Metro Boston \n51->125</item>
        <item>Melrose \n126->199</item>
        <item>Quincy \n200->399</item>
        <item>Medford, Burlington, Lynn, North Shore \n400->599</item>
        <item>Newton, Crosstown \n500-750</item>
        <item>Others \n9000+, combined</item>
    </string-array>


    <string-array name="silver_routes">
        <item>741</item>
        <item>742</item>
        <item>751</item>
        <item>749</item>
        <item>746</item>
    </string-array>

</resources>
