<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mentalmachines.ttime.MainActivity" >
    <!--
    <item
        android:id="@+id/menu_map"
        android:title="@string/action_alerts"
        android:icon="@android:drawable/ic_menu_mapmode"
        app:showAsAction="always"/>
     -->
    <item
        android:id="@+id/menu_favorites"
        android:title="@string/favorites"
        android:icon="@android:drawable/btn_star"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_alerts"
        android:title="@string/action_alerts"
        android:icon="@android:drawable/ic_dialog_alert"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/menu_schedule"
        android:title="@string/action_schedule"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_nearby"
        android:title="@string/action_nearby"
        app:showAsAction="never"/>

</menu>
