<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mentalmachines.ttime.MainActivity" >
    <!--
    <item
        android:id="@+id/menu_map"
        android:title="@string/action_alerts"
        android:icon="@android:drawable/ic_menu_mapmode"
        app:showAsAction="always"/>
     -->
    <item
        android:id="@+id/menu_favorites"
        android:title="@string/favorites"
        android:icon="@drawable/ic_star_light"
        app:showAsAction="always"/>
    <item
        android:id="@+id/menu_showmap"
        android:title="@string/stopMap"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_alerts"
        android:title="@string/action_alerts"
        android:icon="@drawable/ic_alert_light"
        app:showAsAction="ifRoom"/>

</menu>
