<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <TextView android:id="@+id/route_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:gravity="center"
        android:textSize="32dp"
        android:textColor="@android:color/black"
        android:textStyle="italic"
        android:text="@string/def_text" />
    <RelativeLayout android:id="@+id/route_swipeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout android:id="@+id/route_swipe_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button android:id="@+id/route_leftButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:padding="6dp"
                android:textColor="@drawable/direction_selector"
                android:text="@string/inbound"/>
            <Button android:id="@+id/route_rightButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="4dp"
                android:padding="6dp"
                android:textColor="@drawable/direction_selector"
                android:text="@string/outbound"/>
        </LinearLayout>
        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/route_swipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/route_swipe_row"
            android:paddingBottom="@dimen/def_margin"
            android:paddingLeft="@dimen/def_padding"
            android:paddingRight="@dimen/def_padding"
            tools:context=".fragments.RouteFragment"  >

            <!-- To do text appearance large -->
            <android.support.v7.widget.RecyclerView
                android:id="@+id/route_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="4dp"
                app:layoutManager="LinearLayoutManager"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                tools:context="com.mentalmachines.ttime.MainActivity"
                tools:listitem="@layout/t_stop" />
        </android.support.v4.widget.SwipeRefreshLayout>
    </RelativeLayout>

</FrameLayout>